# ansible-collection-quay

./: .gitignore  .zuul.yaml  README.md  README.rst  galaxy.yml  setup.cfg
doc/source/: conf.py  index.rst
playbooks/: run.yaml
plugins/doc_fragments/: quay.py
plugins/module_utils/: quay.py
plugins/modules/: tag_info.py
