[metadata]
name = ansible-collections-quay
summary = Ansible collections for getting info about quay repository tags
description-file =
    README.md

author = lego963
home-page = https://github.com/lego963
classifier =
    License :: OSI Approved :: Apache License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Topic :: System :: Systems Administration
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/collections/ansible_collections/lego963/quay/ = README.md
    share/ansible/collections/ansible_collections/lego963/quay/plugins = plugins/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
